# GoogleIt

./: .pypirc  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
src/GoogleIt/: converter.py  googleit.py  models.py  palm_model.py  text_processor.py
src/GoogleIt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
