[metadata]
name = GoogleIt
version = 0.2.2
author =  William Renaldy A
author_email = williamrenaldy.a@gmail.com
description = Googles the content and does the processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/william-renaldy/GoogleIt
project_urls =
    Bug Tracker = https://github.com/william-renaldy/GoogleIt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.12.2
    docx>=0.2.4
    nltk>=3.8
    pdf2docx>=0.5.6
    protobuf>=4.25.1
    PyPDF2>=3.0.1
    python_docx>=0.8.11
    requests>=2.28.2
    scikit_learn>=1.3.2
    selenium>=4.16.0

[options.packages.find]
where = src


